testsuite/bsc.interra/messages/EUnboundVar/EUnboundVar1.bs.bsc-out.expected
checking package dependencies
compiling EUnboundVar1.bs
Error: "EUnboundVar1.bs", line 31, column 12: (T0004)
  Unbound variable `clk'
Error: "EUnboundVar1.bs", line 31, column 12: (T0020)
  Type mismatch
  Expected type:
    a__ b__

  Inferred type:
    Prelude.Bit 1

